# hdfs-mcp

./: LICENSE  README.md  hdfs.py  hdfs_config.ini  main.py  pyproject.toml  requirements.txt
